Corrected BP warnings and CAR issues Added .XML documentation Added BPSupressions file Updated .gitignore Test model clean-up

--- a/.gitignore
+++ b/.gitignore
@@ -362,6 +362,9 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 
+# GPU Cache
+GPUCache/
+
 # D365 specific
 bin/
 resources/
